Made correct/incorrect modals bigger on mobile

--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -19,21 +19,21 @@ h6 {
   margin: 0;
 }
 
-h1 { font-size: 8.0rem; letter-spacing: -.1rem; line-height: 1.2; }
-h2 { font-size: 4.4rem; letter-spacing: -.1rem; line-height: 1.25; }
+h1 { font-size: 8.0rem; letter-spacing: -.1rem; line-height: 1.3; }
+h2 { font-size: 4.4rem; letter-spacing: -.1rem; line-height: 1.3; }
 h3 { font-size: 4.0rem; letter-spacing: -.1rem; line-height: 1.3; }
 h4 { font-size: 3.6rem; letter-spacing: -.08rem; line-height: 1.35; }
 h5 { font-size: 3.2rem; letter-spacing: -.05rem; line-height: 1.3; }
-h6 { font-size: 2.8rem; letter-spacing: 0; line-height: 1.2; }
+h6 { font-size: 2.8rem; letter-spacing: 0; line-height: 1.3; }
 
 // Smaller than Desktop
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
   h1 { font-size: 7.0rem; }
-  h2 { font-size: 4.0rem; }
-  h3 { font-size: 3.6rem; }
-  h4 { font-size: 3.2rem; }
-  h5 { font-size: 2.8rem; }
-  h6 { font-size: 2.4rem; }
+  h2 { font-size: 3.8rem; }
+  h3 { font-size: 3.4rem; }
+  h4 { font-size: 3.0rem; }
+  h5 { font-size: 2.6rem; }
+  h6 { font-size: 2.2rem; }
 }
 
 /* Smaller than tablet */
@@ -48,10 +48,10 @@ h6 { font-size: 2.8rem; letter-spacing: 0; line-height: 1.2; }
 
 /* Smaller than phablet (also point when grid becomes active) */
 @media (max-width: 550px) {
-  h1 { font-size: 3.0rem; }
+  h1 { font-size: 3.2rem; }
   h2 { font-size: 2.6rem; }
   h3 { font-size: 2.2rem; }
   h4 { font-size: 1.8rem; }
   h5 { font-size: 1.4rem; }
-  h6 { font-size: 1.0rem; }
+  h6 { font-size: 1.2rem; }
 }
