--- a/app/assets/stylesheets/components/flipcard.scss
+++ b/app/assets/stylesheets/components/flipcard.scss
@@ -1,13 +1,18 @@
 .flipcard {
   cursor: pointer;
   float: left;
-  margin: 60px 1%;
+  margin: 0 1% 12vh 1%;
   padding-bottom: 25%;
   position: relative;
   width: 23%;
   text-align: center;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-
+  @media (max-width: 550px) {
+    margin: 0 1% 12% 1%;
+  }
+  @media (max-height: 700px) {
+    margin: 0 1% 15% 1%;
+  }
   .flipcard-front,
   .flipcard-back {
     -webkit-backface-visibility: hidden;
@@ -37,6 +42,7 @@
       width: 100%;
       word-spacing: 100vw;
       @media (max-width: 550px) {
+        padding: 5px 0 10px 0;
         border: 1px solid rgba(228,167,190,0.2);
         border-top: 0;
       }
