--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -10,8 +10,8 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  @media (max-width: 550px) {
-    padding-top: 10%;
+  @media (max-width: 750px) {
+    padding-top: 5%;
   }
 }
 
@@ -27,8 +27,8 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animatetop;
   animation-duration: 0.4s;
-  @media (max-width: 550px) {
-    width: 90%;
+  @media (max-width: 750px) {
+    width: 95%;
   }
 }
 
